added event listeners using .createElement

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <fieldset>
+        <input type="text" id="addNum">
+        <button id="addIt">Add</button>
+    </fieldset>
+    <fieldset>
+        <input type="text" id="subNum">
+        <button id="subIt">Subtract</button>
+    </fieldset>
+    <section id="addGoesHere"></section>
+    <section id="subGoesHere"></section>
     
     <script type= "module" src="scripts/main.js"></script>
 </body>
